fixed width issue on small screens

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -102,7 +102,8 @@ ol li
   height: 170px;}
 
 #logo
-{ width: 860px;
+{ width: auto;
+  margin-left: 30px;
   position: relative;
   height: 134px;}
 
